fixed align of u<il> projects

--- a/style.css
+++ b/style.css
@@ -54,7 +54,6 @@ h1 {
     line-height: 24px;
     color: #000000;
     padding-left: 0px;
-    list-style-position: inside;
 }
 
 .list-primary-item {
